# newsagg

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
src/newsagg/: main.py  main_async.py  models.py  settings.py
src/newsagg/adapters/: base.py  json.py  reddit.py  rss.py
src/newsagg/auth/: email_validation.py  exceptions.py  password_validation.py  token_encryption.py
src/newsagg/config/: database.py
src/newsagg/models/: article.py  user.py
src/newsagg/repositories/: article_repo.py  user_repo.py
src/newsagg/routers/: article_router.py  auth_router.py  rest_api.py  user_router.py
src/newsagg/schemas/: article.py  exceptions.py  user.py
src/newsagg/scrapers/: article_scraper.py  service.py
src/newsagg/services/: article_service.py  auth_service.py  exceptions.py  user_service.py
